[package]
name = "lose-fat"
version = "0.1.0"
edition = "2021"
description = "A web appliciton for calculating diet to lose fat"
keywords = ["lose-fat", "web", "wasm"]
categories = ["web-programming"]
authors = ["Shuocheng Wang <wangshch5@outlook.com>"]
homepage = "https://github.com/ShuochengWang/lose-fat"
repository = "https://github.com/ShuochengWang/lose-fat"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
wasm-bindgen = "0.2.89"

[dependencies.web-sys]
version = "0.3.5"
features = [
  'Storage',
]

[features]
default = []
